tests/snapshots/test_runner__tests__compiler__transpile__string_interpolation_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let my_dog = (name = "bibi");
  "Hello ${my_dog .name} where are you?" print

============
EXIT CODE
============
0

============
STDOUT
============
Hello bibi where are you?

============
STDERR
============
