tests/snapshots/test_runner__tests__compiler__transpile__string_interpolation_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Nested interpolations
entry
  "I am ${"Hello ${"World"}"} years old" print

============
EXIT CODE
============
0

============
STDOUT
============
I am Hello World years old

============
STDERR
============
