tests/snapshots/test_runner__tests__compiler__transpile__tail_call_elimination_1.kk.skip.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let minus = (a: Integer, b: Integer): Integer => @@@  _0 - _1 @@@
let equals = (a: Integer, b: Integer): Boolean => @@@ _0 === _1 @@@

let loopDown = (n: Integer): Integer => {
  if n.equals(0)
    0
  else
    n.minus(1).loopDown()
}

// This will result in stack overflow if loopDown don't have tail call elimination
// Last tested, any number above 5964 will trigger stack overflow
5999.loopDown().print()

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
