tests/snapshots/test_runner__tests__compiler__transpile__top_level_destructuring_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let {..}
  : {say: String greetings: String}
  = { say: "Hello" greetings: "Yo" }

do say.print
do greetings.print

============
EXIT CODE
============
0

============
STDOUT
============
Hello
Yo

============
STDERR
============
